--- a/package.json
+++ b/package.json
@@ -1,46 +1,23 @@
 {
-  "name": "es6_practice",
+  "name": "simple_guestbook_app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple node.js, express app",
   "main": "index.js",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-cli": "^6.26.0",
-    "babel-preset-latest": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chalk": "^2.3.0",
-    "chai": "^4.1.2",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.10.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-watch": "^3.1.3",
-    "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^2.30.1",
-    "json-schema-faker": "^0.4.6",
-    "jsdom": "^11.3.0",
-    "json-server": "^0.12.1",
-    "localtunnel": "^1.8.3",
-    "nsp": "^2.8.1",
-    "numeral": "^2.0.6",
-    "open": "^0.0.5",
-    "style-loader": "^0.19.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack": "^3.8.1",
-    "whatwg-fetch": "^2.0.3",
-    "webpack-md5-hash": "^0.0.5"
+    "express": "^4.16.2"
   },
   "devDependencies": {
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
-    "mocha": "^4.0.1",
-    "morgan": "^1.9.0"
+    "lodash": "^4.17.4",
+    "morgan": "^1.9.0",
+    "uuid": "^3.1.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "xo --fix",
+    "start": "node index.js"
   },
   "author": "",
   "license": "MIT"
